ng select arrow overlapping issue fixed

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -494,6 +494,7 @@
 }
 .ng-select .ng-select-container .ng-value-container {
   padding-left: 1rem;
+  padding-right: 2rem;
 }
 
 .ng-select .ng-select-container {
@@ -1621,4 +1622,3 @@ p {
     transform: rotate(360deg);
   }
 }
- 
